quoting-CypressTK1/force-app/main/default/objects/ColaAdjustment__c/ColaAdjustment__c.object-meta.xml
<CustomObject>
    <label>Cola Adjustment</label>
    <nameField>
        <label>Cola Adjustment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cola Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>