quoting-CypressTK1/force-app/main/default/objects/ColaAdjustment__c/fields/ColaRateId__c.field-meta.xml
<CustomField>
    <fullName>ColaRateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cola Rate</label>
    <referenceTo>COLARate__c</referenceTo>
    <relationshipLabel>Cola Adjustments Rate Card</relationshipLabel>
    <relationshipName>ColaAdjustmentsRateCard</relationshipName>
    <type>Lookup</type>
</CustomField>