quoting-CypressTK1/force-app/main/default/objects/ColaAdjustment__c/fields/CostIncrease__c.field-meta.xml
<CustomField>
    <fullName>CostIncrease__c</fullName>
    <label>Cost Increase</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>