quoting-CypressTK1/force-app/main/default/objects/ColaAdjustment__c/fields/CostIncreaseWithOverride__c.field-meta.xml
<CustomField>
    <fullName>CostIncreaseWithOverride__c</fullName>
    <label>Cost Increase with COLA Override</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>