quoting-CypressTK1/force-app/main/default/objects/ColaAdjustment__c/fields/CurrentCost__c.field-meta.xml
<CustomField>
    <fullName>CurrentCost__c</fullName>
    <label>Current Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>