quoting-CypressTK1/force-app/main/default/objects/ColaAdjustment__c/fields/CurrentRevenue__c.field-meta.xml
<CustomField>
    <fullName>CurrentRevenue__c</fullName>
    <label>Current Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>