quoting-CypressTK1/force-app/main/default/objects/ColaAdjustment__c/fields/NewCost__c.field-meta.xml
<CustomField>
    <fullName>NewCost__c</fullName>
    <label>New Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>