quoting-CypressTK1/force-app/main/default/objects/ColaAdjustment__c/fields/NewCostWithOverride__c.field-meta.xml
<CustomField>
    <fullName>NewCostWithOverride__c</fullName>
    <label>New Cost with COLA Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>