quoting-CypressTK1/force-app/main/default/objects/ColaAdjustment__c/fields/OriginalCost__c.field-meta.xml
<CustomField>
    <fullName>OriginalCost__c</fullName>
    <label>Original Cost</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>